@@ -28,5 +28,6 @@ guint64 date_time_to_ser_timestamp(GDateTime *dt);
 double date_time_to_Julian(GDateTime *dt);
 GDateTime *FITS_date_to_date_time(gchar *date);
 gchar *date_time_to_FITS_date(GDateTime *date);
+gchar *date_time_to_date(GDateTime *datetime);
 
 #endif /* SRC_CORE_SIRIL_DATE_H_ */
