@@ -373,7 +373,7 @@ static void add_object_in_tree_view(const gchar *object) {
 	set_cursor_waiting(TRUE);
 
 	query_server server = get_server_from_combobox();
-	gchar *result = search_in_catalogs(object, server);
+	gchar *result = search_in_online_catalogs(object, server);
 	if (result) {
 		free_Platedobject();
 		parse_content_buffer(result, &obj);
@@ -395,7 +395,6 @@ static void add_object_in_tree_view(const gchar *object) {
 			gtk_tree_selection_select_iter(selection, &iter);
 			g_signal_emit_by_name(GTK_TREE_VIEW(GtkTreeViewIPS), "cursor-changed");
 		}
-
 	}
 	set_cursor_waiting(FALSE);
 }
